# cider-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yaml
ipmap/: cli.py  models.py
ipmap/datasources/: cider_csv.py
ipmap/utils/: date_detection.py
ipmap/viz/: export.py  heatmap.py
